feat: banner section

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@
 
 	/*Letras*/
 	--ff-sans: 'DM Sans', sans-serif;
-	--fs-header: 4rem;
+	--fs-heading: 4rem;
 	--fs-title-lg: 2.6rem;
 	--fs-title: 2rem;
 	--fs-body: 1.8rem;
